[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["1gy"]
edition = "2021"
license = "MIT"
repository = "https://github.com/1gy/att"
version = "0.1.0"

[workspace.dependencies]
anyhow = { version = "1.0.75" }
thiserror = { version = "1.0.50" }
tokio = { version = "1.32.0" }
serde = { version = "1.0"}
serde_json = { version = "1.0"}
